// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`coyote-test 1`] = `
Array [
  "Canis_latrans (EU400577) / Canis_latrans (EU400577)",
  "Canis_latrans (EU400578) / Canis_latrans (EU400578)",
]
`;

exports[`emydura 1`] = `
Array [
  "Emydura subglobosa (KC692462) / Emydura subglobosa (KC692462)",
  "Emydura subglobosa (NC_026048) / Emydura subglobosa (NC_026048)",
  "Emydura subglobosa (KC755184) / Emydura subglobosa (KC755184)",
]
`;

exports[`emydura-short 1`] = `
Array [
  "Emydura subglobosa (KC755184) / Emydura subglobosa (KC755184)",
]
`;

exports[`kino 1`] = `
Array [
  "",
]
`;

exports[`plaamyd 1`] = `
Array [
  "Amyda cartilaginea (LM537480) / Amyda cartilaginea (LM537480)",
  "Amyda cartilaginea (LM537481) / Amyda cartilaginea (LM537481)",
  "Amyda cartilaginea (LM537485) / Amyda cartilaginea (LM537485)",
  "Amyda cartilaginea (LM537484) / Amyda cartilaginea (LM537484)",
  "Amyda cartilaginea (LM537483) / Amyda cartilaginea (LM537483)",
  "Amyda cartilaginea (LM537464) / Amyda cartilaginea (LM537464)",
  "Amyda cartilaginea (LM537463) / Amyda cartilaginea (LM537463)",
  "Amyda cartilaginea (AY259550) / Amyda cartilaginea (AY259550)",
  "Amyda cartilaginea (JN232534) / Amyda cartilaginea (JN232534)",
  "Amyda cartilaginea (LM537465) / Amyda cartilaginea (LM537465)",
  "Amyda cartilaginea (LM537467) / Amyda cartilaginea (LM537467)",
  "Amyda cartilaginea (LM537491) / Amyda cartilaginea (LM537491)",
  "Amyda cartilaginea (LM537492) / Amyda cartilaginea (LM537492)",
  "Amyda cartilaginea (LM537476) / Amyda cartilaginea (LM537476)",
  "Amyda cartilaginea (LM537493) / Amyda cartilaginea (LM537493)",
  "Amyda cartilaginea (LM537494) / Amyda cartilaginea (LM537494)",
]
`;

exports[`smallerlepus 1`] = `
Array [
  "",
]
`;

exports[`trio171sequence 1`] = `
Array [
  "Amyda cartilaginea (LM537480) / Amyda cartilaginea (LM537480)",
  "Amyda cartilaginea (LM537481) / Amyda cartilaginea (LM537481)",
  "Amyda cartilaginea (LM537485) / Amyda cartilaginea (LM537485)",
  "Amyda cartilaginea (LM537484) / Amyda cartilaginea (LM537484)",
  "Amyda cartilaginea (LM537483) / Amyda cartilaginea (LM537483)",
  "Amyda cartilaginea (LM537464) / Amyda cartilaginea (LM537464)",
  "Amyda cartilaginea (LM537463) / Amyda cartilaginea (LM537463)",
  "Amyda cartilaginea (AY259550) / Amyda cartilaginea (AY259550)",
  "Amyda cartilaginea (JN232534) / Amyda cartilaginea (JN232534)",
  "Amyda cartilaginea (LM537465) / Amyda cartilaginea (LM537465)",
  "Amyda cartilaginea (LM537467) / Amyda cartilaginea (LM537467)",
  "Amyda cartilaginea (LM537491) / Amyda cartilaginea (LM537491)",
  "Amyda cartilaginea (LM537492) / Amyda cartilaginea (LM537492)",
  "Amyda cartilaginea (LM537476) / Amyda cartilaginea (LM537476)",
  "Amyda cartilaginea (LM537493) / Amyda cartilaginea (LM537493)",
  "Amyda cartilaginea (LM537494) / Amyda cartilaginea (LM537494)",
]
`;

exports[`trionychcytb 1`] = `
Array [
  "Amyda cartilaginea (LM537481) / Amyda cartilaginea (LM537481)",
  "Amyda cartilaginea (LM537480) / Amyda cartilaginea (LM537480)",
  "Amyda cartilaginea (LM537463) / Amyda cartilaginea (LM537463)",
  "Amyda cartilaginea (LM537464) / Amyda cartilaginea (LM537464)",
  "Amyda cartilaginea (LM537483) / Amyda cartilaginea (LM537483)",
  "Amyda cartilaginea (LM537484) / Amyda cartilaginea (LM537484)",
  "Amyda cartilaginea (LM537485) / Amyda cartilaginea (LM537485)",
  "Amyda cartilaginea (LM537467) / Amyda cartilaginea (LM537467)",
  "Amyda cartilaginea (LM537465) / Amyda cartilaginea (LM537465)",
  "Amyda cartilaginea (JN232534) / Amyda cartilaginea (JN232534)",
  "Amyda cartilaginea (AY259550) / Amyda cartilaginea (AY259550)",
  "Amyda cartilaginea (LM537492) / Amyda cartilaginea (LM537492)",
  "Amyda cartilaginea (LM537491) / Amyda cartilaginea (LM537491)",
  "Amyda cartilaginea (LM537494) / Amyda cartilaginea (LM537494)",
  "Amyda cartilaginea (LM537493) / Amyda cartilaginea (LM537493)",
  "Amyda cartilaginea (LM537476) / Amyda cartilaginea (LM537476)",
  "Palea steindachneri (AY743417) / Palea steindachneri (AY743417)",
]
`;
